# wallpaperhub

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  app.py  config.json  render.yaml  setup.ps1  uninstall.ps1
backend/: __init__.py  database.py  depressed-cristine-wallpaperhub_2025-12-28T20_09_37.079Z.txt  main.py  models.py  requirements.txt  schemas.py
scripts/: fetch_wallpapers.py
src/: WallpaperEngine.cpp  WallpaperEngine.h  main.cpp
ui/: index.html  script.js  style.css
